[package]
name = "promotion-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.5", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
jsonwebtoken = "7"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
tracing-subscriber = "0.2"
tokio-tungstenite = "0.15"
oauth2 = "4"
base64 = "0.13"
rand = "0.8"
geo = "0.28"
dotenv = "0.15.0"

sea-orm = { version = "0.10.0", features = ["runtime-tokio-native-tls", "sqlx-postgres"] }

chrono = "0.4"
